python/testData/highlighting/paramSpecWithBoundsReported.py
def foo[**P: <error descr="ParamSpec and TypeVarTuple cannot have constraints and upper bounds">str</error>](): ...